--- a/app/src/main/res/layout/widget_entry.xml
+++ b/app/src/main/res/layout/widget_entry.xml
@@ -39,6 +39,6 @@
         android:paddingEnd="@dimen/widget_note_list_outer_padding"
         android:paddingRight="@dimen/widget_note_list_outer_padding"
         android:textColor="@color/widget_fg_default"
-        tools:text="@string/app_name_long" />
+        tools:text="@tools:sample/lorem/random" />
 
 </LinearLayout>
