--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
         <item name="windowActionModeOverlay">true</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">?attr/colorPrimarySurface</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">@bool/isDayMode</item>
     </style>
 
     <style name="fab">
