--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
         <item name="windowActionModeOverlay">true</item>
-        <item name="android:statusBarColor" tools:targetApi="lollipop">?attr/colorPrimarySurface</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">?attr/colorPrimary</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">@bool/isDayMode</item>
     </style>
 
