--- a/app/src/main/res/layout/activity_notes_list_view.xml
+++ b/app/src/main/res/layout/activity_notes_list_view.xml
@@ -11,16 +11,20 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:contentInsetStartWithNavigation="0dp"
-            app:elevation="4dp"
-            app:titleMarginStart="0dp"
-            tools:navigationIcon="@drawable/ic_arrow_back_grey600_24dp"
-            tools:title="@string/app_name" />
+            android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:contentInsetStartWithNavigation="0dp"
+                app:titleMarginStart="0dp"
+                tools:navigationIcon="@drawable/ic_arrow_back_grey600_24dp"
+                tools:title="@string/app_name" />
+        </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swiperefreshlayout"
@@ -60,6 +64,6 @@
         android:id="@+id/fab_create"
         style="@style/fab"
         android:title="@string/action_create"
-        app:backgroundTint="@color/primary"
+        app:backgroundTint="@color/defaultBrand"
         app:srcCompat="@drawable/ic_add_white_24dp" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
