--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -41,6 +41,7 @@
                         android:id="@+id/header_view_background"
                         android:layout_width="match_parent"
                         android:layout_height="164dp"
+                        android:background="@color/defaultBrand"
                         android:contentDescription="@null"
                         android:scaleType="centerCrop"
                         app:srcCompat="@drawable/background" />
@@ -61,9 +62,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/current_account_image"
-                        android:layout_marginTop="6dp"
                         android:layout_marginStart="@dimen/header_padding"
                         android:layout_marginLeft="@dimen/header_padding"
+                        android:layout_marginTop="6dp"
                         android:layout_marginEnd="@dimen/header_padding"
                         android:layout_marginRight="@dimen/header_padding"
                         android:ellipsize="end"
@@ -81,34 +82,34 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/app_name"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
                         android:layout_marginStart="@dimen/header_padding"
                         android:layout_marginLeft="@dimen/header_padding"
                         android:layout_marginEnd="@dimen/widget_margin"
                         android:layout_marginRight="@dimen/widget_margin"
+                        android:layout_toStartOf="@id/account_arrow"
+                        android:layout_toLeftOf="@id/account_arrow"
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:shadowColor="@android:color/black"
-                        android:layout_alignParentStart="true"
-                        android:layout_toStartOf="@id/account_arrow"
                         android:shadowDx="0.5"
                         android:shadowDy="0"
                         android:shadowRadius="2"
                         android:textColor="@android:color/white"
                         android:textSize="12sp"
-                        tools:text="user@nextcloud.example.comuser@nextcloud.example.comuser@nextcloud.example.com"
-                        android:layout_alignParentLeft="true"
-                        android:layout_toLeftOf="@id/account_arrow" />
+                        tools:text="user@nextcloud.example.comuser@nextcloud.example.comuser@nextcloud.example.com" />
 
                     <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/account_arrow"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/account_arrow"
-                        app:srcCompat="@drawable/ic_arrow_drop_down_white_24dp"
-                        android:layout_alignParentEnd="true"
                         android:layout_alignBottom="@+id/account"
-                        android:layout_marginEnd="@dimen/header_padding"
+                        android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:layout_marginRight="@dimen/header_padding" />
+                        android:layout_marginEnd="@dimen/header_padding"
+                        android:layout_marginRight="@dimen/header_padding"
+                        app:srcCompat="@drawable/ic_arrow_drop_down_white_24dp" />
                 </RelativeLayout>
 
                 <LinearLayout
@@ -140,10 +141,10 @@
                     android:id="@+id/accountChooser"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="vertical"
                     android:paddingTop="8dp"
                     android:paddingBottom="8dp"
-                    android:orientation="vertical"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
