--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <!-- Colors -->
 
-    <color name="primary_dark">#286090</color>
+    <color name="primary">#121212</color>
 
     <color name="bg_highlighted">#2a2a2a</color>
     <color name="bg_normal">#121212</color>
@@ -13,5 +13,5 @@
     <color name="fg_default_high">#757575</color>
     <color name="fg_contrast">#000000</color>
 
-    <color name="category_background">@color/primary</color>
+    <color name="category_background">@color/defaultBrand</color>
 </resources>
