--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <!-- Colors -->
 
-    <color name="primary">#0082C9</color>
+    <color name="primary">#ffffff</color>
+    <color name="defaultBrand">#0082C9</color>
 
     <color name="bg_highlighted">#eee</color>
     <color name="bg_normal">#ffffff</color>
@@ -16,7 +17,7 @@
 
     <color name="icon_color_default">#757575</color>
 
-    <color name="bg_search_primary">@color/primary</color>
+    <color name="bg_search_primary">@color/defaultBrand</color>
     <color name="bg_search_secondary">#eee</color>
 
     <color name="widget_background">#dfffffff</color>
@@ -24,7 +25,7 @@
     <color name="widget_fg_contrast">#ffffff</color>
 
     <color name="category_background">@color/bg_normal</color>
-    <color name="category_border">@color/primary</color>
+    <color name="category_border">@color/defaultBrand</color>
 
     <!-- Dark Theme -->
     <!-- Defined here until appwidgets can use night/colors -->
