--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <!-- Colors -->
 
     <color name="primary">#ffffff</color>
-    <color name="contrast">#121212</color>
+    <color name="accent">#121212</color>
 
     <color name="defaultBrand">#0082C9</color>
 
