--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,10 +4,11 @@
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
         <item name="windowActionModeOverlay">true</item>
         <item name="colorPrimary">@color/primary</item>
-        <item name="colorAccent">@color/contrast</item>
+        <item name="colorAccent">@color/accent</item>
         <item name="android:statusBarColor" tools:targetApi="lollipop">?attr/colorPrimary</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">@bool/isDayMode</item>
         <item name="android:actionModeBackground">?attr/colorPrimary</item>
+        <item name="colorControlNormal">?attr/colorAccent</item>
     </style>
 
     <style name="fab">
