--- a/app/src/main/res/menu/menu_note_fragment.xml
+++ b/app/src/main/res/menu/menu_note_fragment.xml
@@ -27,8 +27,7 @@
         android:icon="@drawable/ic_share_white_24dp"
         android:orderInCategory="100"
         android:title="@string/menu_share"
-        app:showAsAction="never"
-        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />
+        app:showAsAction="never" />
     <item
         android:id="@+id/menu_move"
         android:icon="@drawable/ic_send_white_24dp"
