--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,8 @@
         <item name="android:windowLightStatusBar" tools:targetApi="m">@bool/isDayMode</item>
         <item name="android:actionModeBackground">?attr/colorPrimary</item>
         <item name="colorControlNormal">?attr/colorAccent</item>
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">?attr/colorPrimary</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">@bool/isDayMode</item>
     </style>
 
     <style name="fab">
