--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,6 +5,7 @@
     <color name="primary">#121212</color>
     <color name="accent">#f5f5f5</color>
 
+    <color name="cursor">#55eeeeff</color>
     <color name="bg_highlighted">#2a2a2a</color>
     <color name="bg_normal">#121212</color>
     <color name="bg_attention">#ff3333</color>
