Adjust selection handles

--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -23,6 +23,7 @@
             android:inputType="textMultiLine|textCapSentences"
             android:padding="16dp"
             android:textColor="@color/fg_default"
+            android:theme="@style/textViewStyle"
             tools:text="@tools:sample/lorem/random" />
     </ScrollView>
 
