--- a/app/src/main/res/layout/fragment_note_preview.xml
+++ b/app/src/main/res/layout/fragment_note_preview.xml
@@ -29,6 +29,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/fg_default"
                 android:textIsSelectable="true"
+                android:theme="@style/textViewStyle"
                 tools:text="@tools:sample/lorem/random" />
         </ScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
@@ -39,6 +40,7 @@
         android:layout_gravity="bottom|end"
         android:translationY="-56dp"
         android:visibility="gone"
+        app:backgroundTint="@color/defaultBrand"
         app:fabSize="mini"
         app:srcCompat="@drawable/ic_keyboard_arrow_up_white_24dp"
         tools:visibility="visible" />
@@ -48,6 +50,7 @@
         style="@style/fab"
         android:layout_gravity="bottom|end"
         android:visibility="gone"
+        app:backgroundTint="@color/defaultBrand"
         app:fabSize="mini"
         app:srcCompat="@drawable/ic_keyboard_arrow_down_white_24dp"
         tools:visibility="visible" />
