--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,9 @@
 
     <color name="defaultBrand">#0082C9</color>
 
-    <color name="cursor">#44111122</color>
+    <color name="cursorHandles">#aa33334a</color>
+    <color name="defaultTextHighlightBackground">#2233334a</color>
+
     <color name="bg_highlighted">#eee</color>
     <color name="bg_normal">#ffffff</color>
     <color name="bg_attention">#d40000</color>
