--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,11 @@
         <item name="colorControlNormal">?attr/colorAccent</item>
         <item name="android:navigationBarColor" tools:targetApi="lollipop">?attr/colorPrimary</item>
         <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">@bool/isDayMode</item>
-        <item name="android:textColorHighlight">@color/cursor</item>
+    </style>
+
+    <style name="textViewStyle">
+        <item name="colorAccent">@color/cursorHandles</item>
+        <item name="android:textColorHighlight">@color/defaultTextHighlightBackground</item>
     </style>
 
     <style name="fab">
