--- a/app/src/main/res/layout/item_account_choose.xml
+++ b/app/src/main/res/layout/item_account_choose.xml
@@ -5,28 +5,43 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
-    android:padding="24dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="@dimen/spacer_3x">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/accountItemAvatar"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:scaleType="center"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:contentDescription="@null"
         android:focusable="false"
-        app:srcCompat="@drawable/ic_account_circle_grey_24dp"
-        android:contentDescription="@null" />
+        android:scaleType="center"
+        app:srcCompat="@drawable/ic_account_circle_grey_24dp" />
 
     <TextView
         android:id="@+id/accountItemLabel"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginStart="@dimen/spacer_2x"
+        android:layout_marginLeft="@dimen/spacer_2x"
+        android:layout_marginEnd="@dimen/spacer_2x"
+        android:layout_marginRight="@dimen/spacer_2x"
+        android:layout_weight="1"
         android:ellipsize="middle"
         android:singleLine="true"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
         android:textColor="?android:textColorPrimary"
-        tools:hint="Username"/>
+        tools:text="@tools:sample/full_names" />
 
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/delete"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:contentDescription="@null"
+        android:focusable="false"
+        android:scaleType="center"
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_delete_grey600_24dp"
+        tools:visibility="visible" />
 </LinearLayout>
