--- a/app/src/main/res/drawable/check.xml
+++ b/app/src/main/res/drawable/check.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+    <item android:id="@+id/area">
         <shape android:shape="oval">
-            <solid android:color="@android:color/holo_green_light" />
+            <solid android:color="@color/defaultBrand" />
             <stroke
                 android:width="1dp"
                 android:color="@android:color/white" />
