--- a/app/src/main/res/layout/dialog_account_switcher.xml
+++ b/app/src/main/res/layout/dialog_account_switcher.xml
@@ -69,9 +69,15 @@
         android:id="@+id/add_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/spacer_2x"
         android:background="?attr/selectableItemBackground"
         android:orientation="horizontal"
-        android:padding="@dimen/spacer_3x">
+        android:paddingStart="@dimen/spacer_3x"
+        android:paddingLeft="@dimen/spacer_3x"
+        android:paddingTop="@dimen/spacer_1x"
+        android:paddingEnd="@dimen/spacer_3x"
+        android:paddingRight="@dimen/spacer_3x"
+        android:paddingBottom="@dimen/spacer_1x">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="36dp"
