--- a/app/src/main/res/layout/item_notes_list_note_item.xml
+++ b/app/src/main/res/layout/item_notes_list_note_item.xml
@@ -40,11 +40,12 @@
 
             <ImageView
                 android:id="@+id/noteFavorite"
-                android:contentDescription="@string/menu_favorite"
-                android:padding="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                tools:src="@drawable/ic_star_yellow_24dp"/>
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@string/menu_favorite"
+                android:padding="@dimen/spacer_2x"
+                tools:src="@drawable/ic_star_yellow_24dp" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/noteStatus"
