--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
+    <style name="BaseTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorAccent">@color/accent</item>
-        <item name="android:statusBarColor" tools:targetApi="lollipop">?attr/colorPrimary</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">@bool/isDayMode</item>
         <item name="android:actionModeBackground">?attr/colorPrimary</item>
         <item name="colorControlNormal">?attr/colorAccent</item>
-        <item name="android:navigationBarColor" tools:targetApi="lollipop">?attr/colorPrimary</item>
-        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">@bool/isDayMode</item>
         <item name="windowActionModeOverlay">true</item>
     </style>
+
+    <style name="AppTheme" parent="BaseTheme" />
 
     <style name="textViewStyle">
         <item name="colorAccent">@color/cursorHandles</item>
@@ -27,9 +25,5 @@
 
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/splashscreen</item>
-        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/defaultBrand</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
-        <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/defaultBrand</item>
-        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">false</item>
     </style>
 </resources>
