--- a/app/src/main/res/layout/dialog_account_switcher.xml
+++ b/app/src/main/res/layout/dialog_account_switcher.xml
@@ -69,7 +69,6 @@
         android:id="@+id/add_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/spacer_2x"
         android:background="?attr/selectableItemBackground"
         android:orientation="horizontal"
         android:paddingStart="@dimen/spacer_3x"
@@ -96,6 +95,42 @@
             android:ellipsize="middle"
             android:singleLine="true"
             android:text="@string/add_account"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
+            android:textColor="?android:textColorPrimary" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/manage_accounts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/spacer_2x"
+        android:background="?attr/selectableItemBackground"
+        android:orientation="horizontal"
+        android:paddingStart="@dimen/spacer_3x"
+        android:paddingLeft="@dimen/spacer_3x"
+        android:paddingTop="@dimen/spacer_1x"
+        android:paddingEnd="@dimen/spacer_3x"
+        android:paddingRight="@dimen/spacer_3x"
+        android:paddingBottom="@dimen/spacer_1x">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:contentDescription="@null"
+            android:focusable="false"
+            android:scaleType="center"
+            app:srcCompat="@drawable/ic_settings_grey600_24dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:ellipsize="middle"
+            android:singleLine="true"
+            android:text="@string/manage_accounts"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
             android:textColor="?android:textColorPrimary" />
 
