--- a/app/src/main/res/layout/item_account_choose.xml
+++ b/app/src/main/res/layout/item_account_choose.xml
@@ -8,14 +8,30 @@
     android:orientation="horizontal"
     android:padding="@dimen/spacer_3x">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/accountItemAvatar"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:contentDescription="@null"
-        android:focusable="false"
-        android:scaleType="center"
-        app:srcCompat="@drawable/ic_account_circle_grey_24dp" />
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/spacer_1hx"
+        android:layout_marginRight="@dimen/spacer_1hx">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/accountItemAvatar"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:contentDescription="@null"
+            android:focusable="false"
+            android:scaleType="center"
+            app:srcCompat="@drawable/ic_account_circle_grey_24dp" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/currentAccountIndicator"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_gravity="end|bottom"
+            android:visibility="gone"
+            app:srcCompat="@drawable/check"
+            tools:visibility="visible" />
+    </FrameLayout>
 
     <TextView
         android:id="@+id/accountItemLabel"
