--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -53,6 +53,7 @@
                         android:layout_toEndOf="@id/logo"
                         android:layout_toRightOf="@id/logo"
                         android:ellipsize="end"
+                        android:fontFamily="sans-serif-light"
                         android:gravity="center_vertical"
                         android:text="@string/app_name"
                         android:textColor="@android:color/white"
